Add multilang support

--- a/index-de.hbs
+++ b/index-de.hbs
@@ -1,5 +1,5 @@
 {{!< default}}
-{{#contentFor "lang"}}{{@site.lang}}{{/contentFor}}
+{{#contentFor "lang"}}de{{/contentFor}}
 {{!-- The tag above means: insert everything in this file
 into the {body} of the default.hbs template --}}
 
