--- a/post.hbs
+++ b/post.hbs
@@ -10,6 +10,12 @@ into the {body} of the default.hbs template --}}
 {{!-- Everything inside the #post tags pulls data from the post --}}
 {{#post}}
 
+{{#has tag="#de"}}
+    {{#contentFor "lang"}}de{{/contentFor}}
+{{else}}
+    {{#contentFor "lang"}}{{@site.lang}}{{/contentFor}}
+{{/has}}
+
 <main id="site-main" class="site-main outer">
     <div class="inner">
 
